--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -66,3 +66,31 @@ background:#f3f2f1
 .govuk-select{
   width: 100%;
 }
+
+.govuk-header__navigation-list{
+  float: right;
+}
+
+.govuk-blue-background{
+  background: #1d70b8;
+  color:white;
+}
+
+.govuk-blue-background .govuk-link{
+  color: white;
+}
+
+.govuk-details-radios{
+  padding-left: 20px;
+border-left: 5px solid #bfc1c3;
+}
+
+.govuk-blue-background .govuk-button{
+  background: white;
+  color: #1d70b8		;
+  font-weight: bold;
+}
+.content-item__link{
+  font-weight: bold;
+  margin-bottom: 12px;
+}
