--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -64,6 +64,30 @@
         </span>
       </a>
     </div>
+    <div class="govuk-header__content">
+  <nav aria-label="Menu" class="govuk-header__navigation ">
+    <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" hidden>Menu</button>
+
+    <ul id="navigation" class="govuk-header__navigation-list">
+      <li class="govuk-header__navigation-item">
+        <a class="govuk-header__link" href="#1">
+          Switch app
+        </a>
+      </li>
+      <li class="govuk-header__navigation-item">
+        <a class="govuk-header__link" href="#2">
+          Hazal Arpalikli
+        </a>
+      </li>
+      <li class="govuk-header__navigation-item">
+        <a class="govuk-header__link" href="#3">
+          Log out
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
   </div>
 </header>{% endblock %}
 
