--- a/app/views/index.html
+++ b/app/views/index.html
@@ -285,8 +285,7 @@ For example 05/05/2021 or 2021
               <td class="govuk-table__cell" data-gtm-id="title-column">
                 <a class="content-item__link" data-gtm-id="content-item-link" data-gtm-item-document-type="finder" href="/metrics/search/all?date_range=past-30-days">Search</a>
 <br>
-<span class="base-path">/search/all</span>
-
+<span class="base-path">/search/all</span>xx
               </td>
               <td class="govuk-table__cell govuk-table__cell--shaded" data-gtm-id="document_type-column">Finder</td>
               <td class="govuk-table__cell govuk-table__cell--numeric" data-gtm-id="upviews-column">3,229,917</td>
