--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -89,3 +89,7 @@ $govuk-assets-path: '/govuk/assets/';
   font-weight: bold;
   margin-bottom: 12px;
 }
+
+.govuk-blue-section-break{
+  border-top:2px solid #005ea5 
+}
