--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <h1 class="govuk-heading-xl">Content data app prototype</h1>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/sign-in.html">End to end journey</a></li>
+      </ul>
       <h2 class="govuk-heading-l">Quick links</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/date-range-option-one.html">Date range option one</a></li>
