--- a/public/stylesheets/unbranded.css
+++ b/public/stylesheets/unbranded.css
@@ -8614,3 +8614,7 @@ x:-moz-any-link {
   font-weight: bold;
   margin-bottom: 12px;
 }
+
+.govuk-blue-section-break {
+  border-top: 2px solid #005ea5;
+}
