--- a/app/views/date-range-option-one.html
+++ b/app/views/date-range-option-one.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+
+
+
 {% block pageTitle %}
   Custom date ranges
 {% endblock %}
@@ -7,7 +10,7 @@
   {% include "includes/phase-banner.html" %}
   </div>
   {% include "includes/help-us-improve-content-data-app.html" %}
-  <div class="govuk-width-container ">
+  <div class="govuk-width-container govuk-wider-container">
 {% endblock %}
 
 {% block content %}
