--- a/app/views/includes/help-us-improve-content-data-app.html
+++ b/app/views/includes/help-us-improve-content-data-app.html
@@ -1,4 +1,4 @@
-<div class="govuk-blue-background">
+<div class="govuk-blue-background" id="hide-help-us">
   <div class="govuk-width-container govuk-!-padding-top-6 govuk-!-padding-bottom-6">
     <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
@@ -10,7 +10,7 @@
         <button class="govuk-button" data-module="govuk-button">
           View questionnaire
         </button>
-        <a class="govuk-link" href="#">Hide this</a>
+        <a class="govuk-link" href="#" id="hide-this">Hide this</a>
       </div>
     </div>
   </div>
