--- a/app/views/includes/table.html
+++ b/app/views/includes/table.html
@@ -4,15 +4,21 @@
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header">Page title</th>
       <th scope="col" class="govuk-table__header">Document type</th>
-      <th scope="col" class="govuk-table__header">Unique page views</th>
-      <th scope="col" class="govuk-table__header">Users who found page useful</th>
-      <th scope="col" class="govuk-table__header">Searches from page</th>
+      <th scope="col" class="govuk-table__header">Unique page views <br /> <a href="/help/?hkey=upviews" data-toggle="modal" data-target="modal-upviews" data-gtm-id="help-icon" class="table__header-help">
+                      <img alt="Help" src="/public/images/question_mark_inverse.svg">
+                  </a></th>
+      <th scope="col" class="govuk-table__header">Users who found page useful <br /> <a href="/help/?hkey=upviews" data-toggle="modal" data-target="modal-upviews" data-gtm-id="help-icon" class="table__header-help">
+                      <img alt="Help" src="/public/images/question_mark_inverse.svg">
+                  </a></th>
+      <th scope="col" class="govuk-table__header">Searches from page <br /><a href="/help/?hkey=upviews" data-toggle="modal" data-target="modal-upviews" data-gtm-id="help-icon" class="table__header-help">
+                      <img alt="Help" src="/public/images/question_mark_inverse.svg">
+                  </a></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
             <td class="govuk-table__cell" data-gtm-id="title-column">
-              <a class="content-item__link" data-gtm-id="content-item-link" data-gtm-item-document-type="transaction" href="/metrics/sign-in-universal-credit?date_range=past-30-days">Sign in to your Universal Credit account</a>
+              <a class="content-item__link" data-gtm-id="content-item-link" data-gtm-item-document-type="transaction" href="/single-view">Sign in to your Universal Credit account</a>
 <br>
 <span class="base-path">/sign-in-universal-credit</span>
 
