--- a/app/views/date-range-option-two.html
+++ b/app/views/date-range-option-two.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+
+{% set containerClasses = "govuk-wider-container" %}
+
 {% block pageTitle %}
   Custom date ranges
 {% endblock %}
@@ -8,7 +11,7 @@
   <!--Hacking this slightly to close the div that constrains the width to allow the blue box to go full width - not recommended!-->
   </div>
   {% include "includes/help-us-improve-content-data-app.html" %}
-  <div class="govuk-width-container ">
+  <div class="govuk-width-container govuk-wider-container">
 {% endblock %}
 
 {% block content %}
