--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -70,7 +70,7 @@
 
     <ul id="navigation" class="govuk-header__navigation-list">
       <li class="govuk-header__navigation-item">
-        <a class="govuk-header__link" href="#1">
+        <a class="govuk-header__link" href="your-applications">
           Switch app
         </a>
       </li>
@@ -80,7 +80,7 @@
         </a>
       </li>
       <li class="govuk-header__navigation-item">
-        <a class="govuk-header__link" href="#3">
+        <a class="govuk-header__link" href="sign-in">
           Log out
         </a>
       </li>
