--- a/public/stylesheets/application-ie8.css
+++ b/public/stylesheets/application-ie8.css
@@ -570,12 +570,12 @@ p + .govuk-heading-s,
 }
 
 .govuk-width-container {
-  max-width: 1400px;
+  max-width: 1020px;
   margin-right: 15px;
   margin-left: 15px;
   margin-right: 30px;
   margin-left: 30px;
-  width: 1400px;
+  width: 1020px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -2675,7 +2675,7 @@ x:-moz-any-link {
 }
 .govuk-notification-banner__content > * {
   box-sizing: border-box;
-  max-width: 898.3333333333px;
+  max-width: 645px;
 }
 .govuk-notification-banner__content > :last-child {
   margin-bottom: 0;
@@ -5891,6 +5891,10 @@ x:-moz-any-link {
   background: #f3f2f1;
 }
 
+.govuk-wider-container {
+  max-width: 1600px;
+}
+
 .govuk-table__header {
   color: #0b0c0c;
   position: sticky;
@@ -5900,7 +5904,7 @@ x:-moz-any-link {
   padding: 15px;
   padding-bottom: 10px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.25;
   outline: 1px solid #bfc1c3;
   background-color: #dee0e2;
