Styling for multiselect filter

--- a/app/views/includes/single-view/page-views.html
+++ b/app/views/includes/single-view/page-views.html
@@ -10,7 +10,7 @@
       classes: "govuk-body-s",
       text: "This is a count of every time the page was viewed. For example, if someone visits page X, then goes to page Y and then back to page X again, page X will have 2 page views (and 1 unique page view). Source: Google Analytics"
     }) }}
-    <h3 class="govuk-heading-m">9,623,402</h3>
+    <h3 class="govuk-heading-l">9,623,402</h3>
     <!--Graphic-->
     {{ govukDetails({
       summaryText: "Page views table",
