--- a/app/views/includes/single-view/past-thirty-days.html
+++ b/app/views/includes/single-view/past-thirty-days.html
@@ -12,24 +12,24 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
     <h3 class="govuk-heading-m">Unique page views</h3>
-    <span>8.13m</span>
+    <span class="govuk-stat">8.13m</span>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <h3 class="govuk-heading-m">Users who found page useful</h3>
-    <span>67%</span>
+    <span class="govuk-stat">67%</span>
     <p class="govuk-body-s">
       Out of 6,078 responses
     </p>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <h3 class="govuk-heading-m">Searches from page</h3>
-    <span>2.7k</span>
+    <span class="govuk-stat">2.7k</span>
     <p class="govuk-body-s">
       0.03% of users searched from the page
     </p>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <h3 class="govuk-heading-m">Feedback comments</h3>
-    <span>230</span>
+    <span class="govuk-stat">230</span>
   </div>
 </div>
