--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -1,45 +1,42 @@
-{% extends "layout-not-signed-in.html" %}
+{% extends "layout.html" %}
+
 {% block header %}
   {{ govukHeader ({
     homepageUrl: "/custom-url",
-      serviceName: "Singleon"
+    serviceName: "Singleon"
   }) }}
 {% endblock %}
+
 {% block pageTitle %}
   Sign in
 {% endblock %}
 
-{% block beforeContent %}
-  {% include "includes/phase-banner.html" %}
-
-{% endblock %}
-
 {% block content %}
-
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-third-from-desktop">
+    <div class="govuk-grid-column-one-half-from-desktop">
       <h1 class="govuk-heading-l">Sign in to GOV.UK</h1>
       {{ govukInput({
-  label: {
-    text: "Email"
-  },
-  id: "event-name",
-  name: "event-name"
-}) }}
-{{ govukInput({
-label: {
-text: "Email"
-},
-id: "event-name",
-name: "event-name"
-}) }}
-{{ govukButton({
-  text: "Sign in",
-  href: "your-applications"
-}) }}
-<p class="govuk-body">
-  <a href="#" class="govuk-link">Forgot your password?</a>
-</p>
+        label: {
+          text: "Email"
+        },
+        id: "email",
+        name: "email"
+      }) }}
+      {{ govukInput({
+        label: {
+          text: "Password"
+        },
+        id: "password",
+        type: "password",
+        name: "password"
+      }) }}
+      {{ govukButton({
+        text: "Sign in",
+        href: "your-applications"
+      }) }}
+      <p class="govuk-body">
+        <a href="#" class="govuk-link">Forgot your password?</a>
+      </p>
     </div>
   </div>
 {% endblock %}
