--- a/public/stylesheets/unbranded-ie8.css
+++ b/public/stylesheets/unbranded-ie8.css
@@ -5964,3 +5964,178 @@ x:-moz-any-link {
 .govuk-blue-section-break {
   border-top: 2px solid #005ea5;
 }
+
+.govuk-stat {
+  font-family: "GDS Transport", arial, sans-serif;
+  font-size: 36px;
+  line-height: 1.1111111111;
+  font-weight: 700;
+}
+
+.govuk-fieldset-max-height .govuk-checkboxes {
+  height: 225px;
+  overflow: scroll;
+  position: relative;
+  padding: 0 0 10px;
+  margin-bottom: 10px;
+  margin-top: 8px;
+  border-bottom: 1px solid #b1b4b6;
+}
+
+.govuk-fieldset-max-height .govuk-checkboxes {
+  padding: 0 10px;
+}
+
+@media (min-width: 48.0625em) {
+  .govuk-fieldset-max-height ::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+
+  .govuk-fieldset-max-height ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.87);
+  }
+}
+.facet-tags {
+  padding-bottom: 5px;
+}
+
+.facet-tags__group {
+  padding: 5px;
+}
+
+@media (min-width: 40.0625em) {
+  .facet-tags__group:nth-child(odd) {
+    background-color: #f3f2f1;
+  }
+}
+.facet-tags__wrapper {
+  vertical-align: middle;
+  margin: 5px 0;
+  display: inline-block;
+}
+
+@media (max-width: 40.0525em) {
+  .facet-tags__wrapper {
+    vertical-align: baseline;
+  }
+}
+.facet-tags__wrapper:first-of-type .facet-tags__preposition:first-of-type {
+  font-weight: bold;
+}
+
+@media (max-width: 40.0525em) {
+  .facet-tags__wrapper:first-of-type .facet-tags__preposition:first-of-type {
+    display: block;
+  }
+}
+.facet-tags__wrapper:first-of-type .facet-tags__preposition:first-of-type:first-letter {
+  text-transform: uppercase;
+}
+
+.facet-tags__preposition {
+  display: table-cell;
+  font-family: "GDS Transport", arial, sans-serif;
+  padding: 0 5px 0 2px;
+  vertical-align: middle;
+  text-transform: lowercase;
+}
+
+@media (max-width: 40.0525em) {
+  .facet-tags__preposition {
+    display: inline-block;
+  }
+}
+.facet-tag {
+  display: table-cell;
+  position: relative;
+  padding: 0.3125em;
+  font-family: "GDS Transport", arial, sans-serif;
+  border: 1px solid #505a5f;
+  border-radius: 0.3125em;
+  background-color: #f3f2f1;
+}
+
+@media (max-width: 40.0525em) {
+  .facet-tag {
+    display: inline-block;
+    background: none;
+    border: 2px solid #0b0c0c;
+  }
+}
+.js-enabled .facet-tag {
+  padding: 0.5em 0.5em 0.5em 1.5em;
+}
+
+.facet-tag__text {
+  display: inline-block;
+  margin-left: 0;
+  pointer-events: none;
+  position: relative;
+  z-index: 1;
+}
+
+.js-enabled .facet-tag__text {
+  margin-left: 0.3125em;
+}
+
+.facet-tag__remove {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+  border-radius: 0.3125em;
+  font-weight: bold;
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 1.1428571429;
+  text-align: left;
+  cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  background: none;
+  border: 0;
+}
+
+@media print {
+  .facet-tag__remove {
+    font-family: sans-serif;
+  }
+}
+@media (min-width: 40.0625em) {
+  .facet-tag__remove {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.25;
+  }
+}
+@media print {
+  .facet-tag__remove {
+    font-size: 14pt;
+    line-height: 1.2;
+  }
+}
+.js-enabled .facet-tag__remove {
+  display: inline-block;
+  border: 1px solid transparent;
+}
+
+.js-enabled .facet-tag__remove:hover {
+  background: #b1b4b6;
+}
+
+.js-enabled .facet-tag__remove:focus {
+  -webkit-box-shadow: inset 0 0 0 2px;
+  box-shadow: inset 0 0 0 2px;
+  border: solid 1px #0b0c0c;
+  outline: 3px solid #fd0;
+}
