Design for the single view page

--- a/app/views/includes/multi-select-filters-option-one.html
+++ b/app/views/includes/multi-select-filters-option-one.html
@@ -1,89 +1,25 @@
-<details class="govuk-details" data-module="govuk-details">
-    <summary class="govuk-details__summary">
-      <span class="govuk-details__summary-text">
-        Change time period
-      </span>
-    </summary>
-    <div class="govuk-form-group govuk-!-margin-top-4 govuk-details-radios">
-      <div class="govuk-radios govuk-radios--small" data-module="govuk-radios">
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="time-period-one" name="time-period" type="radio" value="past-30-days" aria-describedby="time-period-item-hint">
-            <label class="govuk-label govuk-radios__label" for="time-period-one">
-              Past 30 days
-            </label>
-            <div id="time-period-one-item-hint" class="govuk-hint govuk-radios__hint">
-              21 September 2022 to 20 October 2022
-            </div>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="time-period-two" name="time-period" type="radio" value="last-month" aria-describedby="time-period-item-hint">
-              <label class="govuk-label govuk-radios__label" for="time-period-two">
-                Last month
-              </label>
-              <div id="time-period-two-item-hint" class="govuk-hint govuk-radios__hint">
-                1 September 2022 to 30 September 2022
-              </div>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="time-period-three" name="time-period" type="radio" value="past-3-months" aria-describedby="time-period-item-hint">
-              <label class="govuk-label govuk-radios__label" for="time-period-three">
-                Past 3 months
-              </label>
-              <div id="time-period-item-hint" class="govuk-hint govuk-radios__hint">
-                21 July 2022 to 20 October 2022
-              </div>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="time-period-four" name="time-period" type="radio" value="past-6-months" aria-describedby="time-period-item-hint">
-              <label class="govuk-label govuk-radios__label" for="time-period-four">
-                Past 6 months
-              </label>
-              <div id="time-period-item-hint" class="govuk-hint govuk-radios__hint">
-                21 April 2022 to 20 October 2022
-              </div>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="time-period-five" name="time-period" type="radio" value="past-year" aria-describedby="time-period-item-hint">
-              <label class="govuk-label govuk-radios__label" for="time-period-five">
-                Past year
-              </label>
-              <div id="time-period-item-hint" class="govuk-hint govuk-radios__hint">
-                  21 October 2021 to 20 October 2022
-              </div>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="time-period-six" name="time-period" type="radio" value="text" data-aria-controls="conditional-contact-3">
-            <label class="govuk-label govuk-radios__label" for="time-period-six">
-              Custom dates
-            </label>
-          </div>
-          <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-3">
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="event-name">
-                <b>From</b>
-                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-                  <legend class="govuk-fieldset__legend">
-                    For example 05/05/2021 or 2021
-                  </legend>
-                </fieldset>
-              </label>
-              <input class="govuk-input" id="event-name" name="event-name" type="text">
-            </div>
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="event-name">
-                <b>  To </b>
-                <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-                  <legend class="govuk-fieldset__legend">
-                    For example 05/05/2021 or 2021
-                  </legend>
-                </fieldset>
-              </label>
-              <input class="govuk-input" id="event-name" name="event-name" type="text">
-            </div>
-          </div>
-        </div>
-      </div>
-</details>
+<h2 class="govuk-heading-m">Filters</h2>
+<p class="govuk-body"><a href="#" class="govuk-link">Previous searches</a></p>
+
+<div class="govuk-form-group">
+  <label class="govuk-label" for="event-name">
+    From
+  </label>
+  <div id="event-name-hint" class="govuk-hint">
+  For example 2021 or 05/05/2021
+</div>
+  <input class="govuk-input" id="event-name" name="event-name" type="text">
+</div>
+<div class="govuk-form-group">
+  <label class="govuk-label" for="event-name">
+    To
+  </label>
+  <div id="event-name-hint" class="govuk-hint">
+  For example 2021 or 05/05/2021
+</div>
+  <input class="govuk-input" id="event-name" name="event-name" type="text">
+</div>
+
 <div class="govuk-form-group">
   <label class="govuk-label" for="sort">
     Search for a title or url
