--- a/app/views/includes/single-view/feedback.html
+++ b/app/views/includes/single-view/feedback.html
@@ -11,7 +11,8 @@
       classes: "govuk-body-s",
       text: "You can use Feedback Explorer ('Feedex') to find out what users are saying about your content. A high rate of feedback could indicate a problem with the content. The data comes from the 'Is there anything wrong with this page?' form and the satisfaction survey at the end of a transaction that started on GOV.UK. You'll need a Signon account with Feedback Explorer permissions to see the comments. Source: Feedback Explorer"
     }) }}
-    <h3 class="govuk-heading-m">230</h3>
+    <h3 class="govuk-heading-l">230</h3>
+    <img width="100%" src="public/images/feedback.png" />
     <!--Graphic-->
     {{ govukDetails({
       summaryText: "Number of feedback comments table",
