--- a/app/views/includes/single-view/page-views.html
+++ b/app/views/includes/single-view/page-views.html
@@ -11,6 +11,7 @@
       text: "This is a count of every time the page was viewed. For example, if someone visits page X, then goes to page Y and then back to page X again, page X will have 2 page views (and 1 unique page view). Source: Google Analytics"
     }) }}
     <h3 class="govuk-heading-l">9,623,402</h3>
+    <img width="100%" src="public/images/static-unique-page-views.png" />
     <!--Graphic-->
     {{ govukDetails({
       summaryText: "Page views table",
