--- a/app/views/includes/single-view/searches-from-page.html
+++ b/app/views/includes/single-view/searches-from-page.html
@@ -10,7 +10,8 @@
       classes: "govuk-body-s",
       text: "This is the number of internal site searches that were started from the page. When people use internal search, it could be an indication that they haven't found what they're looking for. You'll need access to Google Analytics to see the search terms. Source: Google Analytics"
     }) }}
-    <h3 class="govuk-heading-m">2,702</h3>
+    <h3 class="govuk-heading-l">2,702</h3>
+    <img width="100%" src="public/images/searches-from-page.png" />
     <!--Graphic-->
     {{ govukDetails({
       summaryText: "Searches from page table",
