--- a/app/views/includes/single-view/users-who-found-page-useful.html
+++ b/app/views/includes/single-view/users-who-found-page-useful.html
@@ -10,6 +10,6 @@
       classes: "govuk-body-s",
       text: "Percentage of users who answered 'Yes' rather than 'No' to the 'Is this page useful?' survey found on every page of GOV.UK. The more users who responded, the more reliable the score is. For a more reliable score on a page that doesn't have many responses, choose a longer time period. This survey was introduced in February 2018 so there are no responses before this date.Source: calculated from Google Analytics"
     }) }}
-    <h3 class="govuk-heading-m">67%</h3>
+    <h3 class="govuk-heading-l">67%</h3>
   </div>
 </div>
