--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -55,6 +55,10 @@
           </span>
           <span class="govuk-header__product-name">
               Content Data
+              {{govukTag({
+    text: "Prototype",
+    classes: "govuk-tag--purple"
+  })}}
             </span>
         </span>
       </a>
