--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -36,7 +36,7 @@ $govuk-assets-path: '/govuk/assets/';
   font-size: 14px;
   line-height: 1.25;
   outline: 1px solid #bfc1c3;
-  background-color: #dee0e2;
+  background-color: #f3f2f1;
   font-weight: normal;
 }
 
