--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/date-range-option-one.html">Date range option one</a></li>
         <li><a href="/date-range-option-two.html">Date range option two</a></li>
-        <li><a href="/multi-select-option-one.html">Multi select option one</a></li>
+        <li><a href="/multi-select.html">Multi select</a></li>
       </ul>
     </div>
   </div>
