--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8565,7 +8565,7 @@ x:-moz-any-link {
   font-size: 14px;
   line-height: 1.25;
   outline: 1px solid #bfc1c3;
-  background-color: #dee0e2;
+  background-color: #f3f2f1;
   font-weight: normal;
 }
 
