--- a/app/views/includes/multi-select-filters.html
+++ b/app/views/includes/multi-select-filters.html
@@ -34,13 +34,13 @@
     </legend>
     <div class="govuk-input__wrapper">
       <div class="govuk-input__prefix" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 50" width="50" height="40"><path d="M25.7 24.8L21.9 21c.7-1 1.1-2.2 1.1-3.5 0-3.6-2.9-6.5-6.5-6.5S10 13.9 10 17.5s2.9 6.5 6.5 6.5c1.6 0 3-.6 4.1-1.5l3.7 3.7 1.4-1.4zM12 17.5c0-2.5 2-4.5 4.5-4.5s4.5 2 4.5 4.5-2 4.5-4.5 4.5-4.5-2-4.5-4.5z" fill="currentColor"/></svg></div>
-      <input class="govuk-input" id="cost-per-item" name="cost-per-item" type="text" spellcheck="false">
+      <input onkeyup="documentType()" class="govuk-input" id="document-type-input" name="document-type-input" type="text" spellcheck="false">
     </div>
-    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes govuk-checkboxes--small" id="document-type-list"  data-module="govuk-checkboxes">
       {% for item in types %}
-      <div class="govuk-checkboxes__item">
+      <div class="govuk-checkboxes__item" id="document-type-name">
         <input class="govuk-checkboxes__input" id="type" name="type" type="checkbox" value="{{item}}">
-        <label class="govuk-label govuk-checkboxes__label" for="type">
+        <label class="govuk-label govuk-checkboxes__label"  for="type">
           {{item}}
         </label>
       </div>
@@ -56,11 +56,11 @@
     </legend>
     <div class="govuk-input__wrapper">
       <div class="govuk-input__prefix" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 50" width="40" height="40"><path d="M25.7 24.8L21.9 21c.7-1 1.1-2.2 1.1-3.5 0-3.6-2.9-6.5-6.5-6.5S10 13.9 10 17.5s2.9 6.5 6.5 6.5c1.6 0 3-.6 4.1-1.5l3.7 3.7 1.4-1.4zM12 17.5c0-2.5 2-4.5 4.5-4.5s4.5 2 4.5 4.5-2 4.5-4.5 4.5-4.5-2-4.5-4.5z" fill="currentColor"/></svg></div>
-      <input class="govuk-input" id="cost-per-item" name="cost-per-item" type="text" spellcheck="false">
+      <input onkeyup="organisationType()" class="govuk-input" id="organisation-input" name="organisation-input" type="text" spellcheck="false">
     </div>
-    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes govuk-checkboxes--small" id="organisation-list" data-module="govuk-checkboxes">
       {% for each in organisation %}
-      <div class="govuk-checkboxes__item">
+      <div class="govuk-checkboxes__item" id="organisation-name">
         <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="{{each}}">
         <label class="govuk-label govuk-checkboxes__label" for="organisation">
           {{each}}
@@ -71,9 +71,9 @@
   </fieldset>
 </div>
 <div class="govuk-button-group">
-<button class="govuk-button" data-module="govuk-button">
+<a class="govuk-button" data-module="govuk-button" href="multi-select-results">
 Filter
-</button>
+</a>
 <a class="govuk-link" href="#">Clear all filters</a>
 </div>
 <hr>
